tests/errors/type_property_of_undefined.js
/*
Expected Error:
TypeError
*/
let user = undefined;
let name = user.name;
